--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <header>
       <div style="text-align: center">
-      <img src="imatges/Logo-Delicias.png" alt="="</>
+      <img src="imatges/Logo-Delicias.png" alt="="/>
       </div>
       <div class="nav_head">
       <nav style="text-align: center;">
