--- a/lista/llista.html
+++ b/lista/llista.html
@@ -4,18 +4,18 @@
 	<title>Recetas de pastas - Cocina Online</title>
 	<link rel="stylesheet" type="text/css" href="/css/estiloRecetas.css">
 </head>
-<body class="R_body">
+<body>
 	<header>
 		<div style="text-align: center">
-		<img src="/imatges/Logo-Delicias.png" alt="="</>
+		<img src="/imatges/Logo-Delicias.png" alt="="/>
 		</div>
 		<div class="nav_head">
 		<nav style="text-align: center;">
 			<a href="/index.html">INICIO</a>
-			<a href="#">SOBRE MI</a>
-			<a href="/lista/llista.html">RECETAS</a>
-			<a href="/contacto/contacte.html">CONTACTO</a>
-			<a href="#">OTRAS COSAS</a>
+			<a href="#" class="enlaces">SOBRE MI</a>
+			<a href="/lista/llista.html" class="enlaces">RECETAS</a>
+			<a href="/contacto/contacte.html" class="enlaces">CONTACTO</a>
+			<a href="#" class="enlaces">OTRAS COSAS</a>
 		</nav>
 	  </div>
 	  </header>
@@ -27,56 +27,56 @@
 			<h3>Spaghetti al pesto</h3>
 			<p><strong>Tiempo:</strong> 30 minutos</p>
 			<p><strong>Dificultad:</strong> Fácil</p>
-			<a href="#">Ver receta</a>
+			<a href="/receta/recepta.html" class="enlaces">Ver receta</a>
 		</div>
 
 		<div class="receta">
 			<h3>Lasagna bolognesa</h3>
 			<p><strong>Tiempo:</strong> 1 hora 30 minutos</p>
 			<p><strong>Dificultad:</strong> Media</p>
-			<a href="#">Ver receta</a>
+			<a href="/receta/recepta.html" class="enlaces">Ver receta</a>
 		</div>
 
 		<div class="receta">
 			<h3>Fettuccine Alfredo</h3>
 			<p><strong>Tiempo:</strong> 25 minutos</p>
 			<p><strong>Dificultad:</strong> Fácil</p>
-			<a href="#">Ver receta</a>
+			<a href="/receta/recepta.html" class="enlaces">Ver receta</a>
 		</div>
 
 		<div class="receta">
 			<h3>Spaghetti alla carbonara</h3>
 			<p><strong>Tiempo:</strong> 25 minutos</p>
 			<p><strong>Dificultad:</strong> Fácil</p>
-			<a href="#">Ver receta</a>
+			<a href="/receta/recepta.html" class="enlaces">Ver receta</a>
 		</div>
 
 		<div class="receta">
 			<h3>Raviolis rellenos de espinacas y ricotta</h3>
 			<p><strong>Tiempo:</strong> 1 hora</p>
 			<p><strong>Dificultad:</strong> Media</p>
-			<a href="#">Ver receta</a>
+			<a href="/receta/recepta.html" class="enlaces">Ver receta</a>
 		</div>
 
 		<div class="receta">
 			<h3>Tagliatelle con salsa de tomate y albahaca</h3>
 			<p><strong>Tiempo:</strong> 45 minutos</p>
 			<p><strong>Dificultad:</strong> Fácil</p>
-			<a href="#">Ver receta</a>
+			<a href="/receta/recepta.html" class="enlaces">Ver receta</a>
 		</div>
 
 		<div class="receta">
 			<h3>Cannelloni rellenos de carne</h3>
 			<p><strong>Tiempo:</strong> 1 hora</p>
 			<p><strong>Dificultad:</strong> Media</p>
-			<a href="#">Ver receta</a>
+			<a href="/receta/recepta.html">Ver receta</a>
 		</div>
 
 		<div class="receta">
 			<h3>Spaghetti aglio e olio</h3>
 			<p><strong>Tiempo:</strong> 20 minutos</p>
 			<p><strong>Dificultad:</strong> Fácil</p>
-			<a href="#">Ver</a>
+			<a href="/receta/recepta.html">Ver</a>
 		</div>
 		</main>
 		<footer>
