--- a/receta/recepta.html
+++ b/receta/recepta.html
@@ -2,12 +2,56 @@
 <html>
   <head>
     <title>Recepta</title>
-    <link rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="/css/estiloRecetas.css">
   </head>
   <body>
-    <h1>Recepta</h1>
-    <p>En construcció</p>
-    <a href="index.html">Tornar a la pàgina principal</a>
-
+    <header>
+      <div style="text-align: center">
+      <img src="/imatges/Logo-Delicias.png" alt="="/>
+      </div>
+      <div class="nav_head" >
+      <nav class="R_nav">
+        <a href="/index.html">INICIO</a>
+        <a href="#" class="enlaces">SOBRE MI</a>
+        <a href="/lista/llista.html" class="enlaces">RECETAS</a>
+        <a href="/contacto/contacte.html" class="enlaces">CONTACTO</a>
+        <a href="#" class="enlaces">OTRAS COSAS</a>
+      </nav>
+      </div>
+      </header>
+      <div class="imgCenter">
+        <img src="/imatges/lasagna-napolitana.jpg" width="500px" height="500px" alt="fotos">
+      </div>
+      <div class="texto">
+        <p>....</p>
+      </div>
+      <div>
+        <h3>Ingredientes</h3>
+    <ol>
+      <li>Harina</li>
+      <li>Placas De Pasta</li>
+      <li>Tomate Triturado</li>
+      <li>Queso Rallado</li>
+      <li>Carne Picada</li>
+      <li>Orégano</li>
+      <li>Leche</li>
+      <li>Cebolla</li>
+      <li>Zanahoria</li>
+      <li>Ajo</li>
+    </ol>
+      </div>
+      <div class="texto">
+        <h</h3>
+        <ol>
+          <li>Calentamos una cazuela grande de agua, la más ancha de casa. Cuando empiece a hervir echamos 2 puñados generosos de sal.</li>
+          <li>Introducimos las láminas de lasaña una a una sin que se toquen (para que no se peguen entre ellas). Ahora podemos encontrar infinidad de tipos de lasaña donde no hace hidratarla como se hacía antes. En casa muchas veces para ahorrar tiempo empleo las que se hidratan con la bechamel y el jugo que suelta la salsa al hornear.</li>
+          <li>Si lo hacéis de la manera tradicional tenemos que remover con una cuchara de madera y en unos 10 minutos sacamos las láminas. Las estiramos encima de unas hojas de papel absorbente de cocina. Aunque os parezca que no están, acabarán haciéndose en el horno.</li>
+          <li>El siguiente paso será lavar muy bien todas las verduras que vamos a emplear en el relleno. En la receta os aconsejo el relleno de la clásica salsa boloñesa, zanahorias, ajo, pimientos y cebolla.</li>
+          <li></li>
+        </ol>
+      </div>
   </body>
+  <footer>
+    <nav class="R_footer">FACEBOOK TWITTER INSTAGRAM PINTEREST EMAIL RSS</nav>
+  </footer>
 </html>
