--- a/lista/llista.html
+++ b/lista/llista.html
@@ -76,7 +76,48 @@
 			<h3>Spaghetti aglio e olio</h3>
 			<p><strong>Tiempo:</strong> 20 minutos</p>
 			<p><strong>Dificultad:</strong> Fácil</p>
-			<a href="/receta/recepta.html">Ver</a>
+			<a href="/receta/recepta.html">Ver</a></div>
+		<div class="receta">
+			<h3>Spaghetti aglio e olio</h3>
+			<p><strong>Tiempo:</strong> 20 minutos</p>
+			<p><strong>Dificultad:</strong> Fácil</p>
+			<a href="/receta/recepta.html">Ver</a></div>
+			
+			<div class="receta">
+				<h3>Spaghetti aglio e olio</h3>
+				<p><strong>Tiempo:</strong> 20 minutos</p>
+				<p><strong>Dificultad:</strong> Fácil</p>
+				<a href="/receta/recepta.html">Ver</a></div>
+				<div class="receta">
+					<h3>Spaghetti aglio e olio</h3>
+					<p><strong>Tiempo:</strong> 20 minutos</p>
+					<p><strong>Dificultad:</strong> Fácil</p>
+					<a href="/receta/recepta.html">Ver</a></div>
+					<div class="receta">
+						<h3>Spaghetti aglio e olio</h3>
+						<p><strong>Tiempo:</strong> 20 minutos</p>
+						<p><strong>Dificultad:</strong> Fácil</p>
+						<a href="/receta/recepta.html">Ver</a></div>
+						<div class="receta">
+							<h3>Spaghetti aglio e olio</h3>
+							<p><strong>Tiempo:</strong> 20 minutos</p>
+							<p><strong>Dificultad:</strong> Fácil</p>
+							<a href="/receta/recepta.html">Ver</a></div>
+							<div class="receta">
+								<h3>Spaghetti aglio e olio</h3>
+								<p><strong>Tiempo:</strong> 20 minutos</p>
+								<p><strong>Dificultad:</strong> Fácil</p>
+								<a href="/receta/recepta.html">Ver</a></div>
+								<div class="receta">
+									<h3>Spaghetti aglio e olio</h3>
+									<p><strong>Tiempo:</strong> 20 minutos</p>
+									<p><strong>Dificultad:</strong> Fácil</p>
+									<a href="/receta/recepta.html">Ver</a></div>
+									<div class="receta">
+										<h3>Spaghetti aglio e olio</h3>
+										<p><strong>Tiempo:</strong> 20 minutos</p>
+										<p><strong>Dificultad:</strong> Fácil</p>
+										<a href="/receta/recepta.html">Ver</a></div>
 		</div>
 		</main>
 		<div class="margenFinal"></div>
