--- a/receta/recepta.html
+++ b/receta/recepta.html
@@ -2,25 +2,25 @@
 <html>
   <head>
     <title>Recepta</title>
-    <link rel="stylesheet" type="text/css" href="/css/estiloRecetas.css">
+    <link rel="stylesheet" type="text/css" href="../css/estiloRecetas.css">
   </head>
   <body>
     <header>
       <div style="text-align: center">
-      <img src="/imatges/Logo-Delicias.png" alt="="/>
+      <img src="../imatges/Logo-Delicias.png" alt="="/>
       </div>
       <div class="nav_head" >
       <nav class="R_nav">
-        <a href="/index.html">INICIO</a>
+        <a href="../index.html">INICIO</a>
         <a href="#" class="enlaces">SOBRE MI</a>
-        <a href="/lista/llista.html" class="enlaces">RECETAS</a>
-        <a href="/contacto/contacte.html" class="enlaces">CONTACTO</a>
+        <a href="../lista/llista.html" class="enlaces">RECETAS</a>
+        <a href="../contacto/contacte.html" class="enlaces">CONTACTO</a>
         <a href="#" class="enlaces">OTRAS COSAS</a>
       </nav>
       </div>
       </header>
       <div class="imgCenter">
-        <img src="/imatges/lasagna-napolitana.jpg" width="500px" height="500px" alt="fotos">
+        <img src="../imatges/lasagna-napolitana.jpg" width="500px" height="500px" alt="fotos">
       </div>
       <div class="texto">
         <p>Lasaña de carne casera. Receta tradicional paso a paso</p>
