--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="lista/llista.html">RECETAS</a>
           <a href="contacto/contacte.html">CONTACTO</a>
           <a href="#">OTRAS COSAS</a>
-          <a href="xml/recetas.xml">RECETASx</a>
+          <a href="xml/recetas.xsl">RECETASx</a>
       </nav>
     </div>
     </header>
