--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
       <nav style="text-align: center;">
           <a href="#">INICIO</a>
           <a href="#">SOBRE MI</a>
-          <a href="lista/llista.html">RECETAS</a>
+          <a href="xml/recetas.xsl">RECETAS</a>
           <a href="contacto/contacte.html">CONTACTO</a>
           <a href="#">OTRAS COSAS</a>
-          <a href="xml/recetas.xsl">RECETASx</a>
       </nav>
     </div>
     </header>
