--- a/pt1-floresantonio-fernandezarnau-asixc1b/reloj/index.html
+++ b/pt1-floresantonio-fernandezarnau-asixc1b/reloj/index.html
@@ -4,11 +4,11 @@
 HTML
 <meta charset="UTF-8">
 <title>Reloj con Javascript</title>
-<meta name="authors" content="AFL AFP Arnau Fernández Pinar Antonio Flores Lopez">
+<meta name="authors" content="AFL AFP MK Arnau Fernández Pinar Antonio Flores Lopez Matvei Karikh">
 <meta name="description" content="M04 UF3 A1. Java Script">
 <meta name="dateCreated" content="02/05/2023">
-<link rel="stylesheet" href="reloj_v3.css">
-<script type="text/javascript" src="reloj_v3.js"></script>
+<link rel="stylesheet" href="style.css">
+<script type="text/javascript" src="code.js"></script>
 </head>
 <body onload="actualizaReloj()">
 <h1 id="horaActual">hh:mm:ss</h1>
