--- a/pt1-floresantonio-fernandezarnau-asixc1b/index.html
+++ b/pt1-floresantonio-fernandezarnau-asixc1b/index.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-HTML
-<meta charset="UTF-8">
-<title>Reloj con Javascript</title>
-<meta name="authors" content="AFL AFP MK Arnau Fernández Pinar Antonio Flores Lopez Matvei Karikh">
-<meta name="description" content="M04 UF3 A1. Java Script">
-<meta name="dateCreated" content="02/05/2023">
-<link rel="stylesheet" href="style.css">
-<script type="text/javascript" src="code.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ruleta de Nombres</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body onload="actualizaReloj()">
-<h1 id="horaActual">hh:mm:ss</h1>
+<body>
+  <canvas id="rouletteCanvas" width="650" height="650"></canvas>
+  <button id="spinButton">Girar ruleta</button>
+  <script src="code.js"></script>
 </body>
 </html>
