--- a/pt1-floresantonio-fernandezarnau-asixc1b/index.html
+++ b/pt1-floresantonio-fernandezarnau-asixc1b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ruleta de Nombres</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css/">
 </head>
 <header>
   <h2>JuegaJuegos</h2>
@@ -20,6 +20,6 @@
           <button id="alarm" onclick="setAlarm()">Establecer Alarma</button>
         </div>
       </div>    
-  <script src="/code.js"></script>
+  <script src="code.js/"></script>
 </body>
 </html>
