--- a/pt1-floresantonio-fernandezarnau-asixc1b/index.html
+++ b/pt1-floresantonio-fernandezarnau-asixc1b/index.html
@@ -19,6 +19,7 @@
         <div class="button-container">
           <button id="alarm" onclick="setAlarm()">Establecer Alarma</button>
         </div>
+        <audio src="./ruleta.mp3">p</audio>
       </div>    
   <script src="code.js"></script>
 </body>
